@@ -108,9 +108,6 @@ Bug(senorblanco) fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html [ 
 # Has been failing since r133544-133546
 Bug(senorblanco) [ Release ] fast/js/toString-and-valueOf-override.html [ Failure ]
 
-# Failing since r133592.
-Bug(senorblanco) inspector/debugger/script-formatter-breakpoints.html [ Failure Timeout ]
-
 webkit.org/b/101362 [ Debug ] fast/dom/Window/customized-property-survives-gc.html [ Pass Slow ]
 
 # -----------------------------------------------------------------
